More fixes on mobile

--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -4,6 +4,7 @@
     .modal {
         width: 100vw;
         padding: 5%;
+        left: 0px;
     }
 
     /* CONTACT MODAL */
